
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int VC_CONTAINER_T ;


 int LOG_ERROR (int *,char*,...) ;
 unsigned int RTSP_MAJOR_VERSION ;
 unsigned int RTSP_MINOR_VERSION ;
 unsigned int RTSP_STATUS_MULTIPLE_CHOICES ;
 unsigned int RTSP_STATUS_OK ;
 int sscanf (char const*,char*,unsigned int*,unsigned int*,unsigned int*) ;

__attribute__((used)) static bool rtsp_successful_response_status( VC_CONTAINER_T *p_ctx,
      const char *status_line)
{
   unsigned int major_version, minor_version, status_code;


   if (sscanf(status_line, "RTSP/%u.%u %u", &major_version, &minor_version, &status_code) != 3)
   {
      LOG_ERROR(p_ctx, "RTSP: Invalid response status line:\n%s", status_line);
      return 0;
   }

   if (major_version != RTSP_MAJOR_VERSION || minor_version != RTSP_MINOR_VERSION)
   {
      LOG_ERROR(p_ctx, "RTSP: Unexpected response RTSP version: %u.%u", major_version, minor_version);
      return 0;
   }

   if (status_code < RTSP_STATUS_OK || status_code >= RTSP_STATUS_MULTIPLE_CHOICES)
   {
      LOG_ERROR(p_ctx, "RTSP: Response status unsuccessful:\n%s", status_line);
      return 0;
   }

   return 1;
}
